--- a/public/back2/css/common.css
+++ b/public/back2/css/common.css
@@ -108,7 +108,7 @@ ul {
 
 .lt_main {
   height: 1000px;
-  background-color: pink;
+  /* background-color: pink; */
   padding-left: 180px;
   padding-top: 50px;
   transition: all 1s;
@@ -140,4 +140,17 @@ ul {
   text-align: center;
   color: #fff;
   font-size: 20px;
+}
+
+/* 指定echarts容器的宽高 */
+.echarts_1,
+.echarts_2 {
+  width: 48%;
+  height: 400px;
+}
+
+.table.table-bordered th,
+.table.table-bordered td {
+  vertical-align: middle;
+  text-align: center;
 }
